# CopernicusGlobalLand

./: .gitignore  README.md  main.py  main_openstack.py
AnomalyDetectors/: LongTermComparisonAnomalyDetector.py  TimeseriesAnomalyDetector.py
CGLSNatStatsTools/CGLSNatStatsTools/: CMakeLists.txt  FindLibZip.cmake
CGLSNatStatsTools/CGLSNatStatsTools/lib/Anomalies/: Utils.cpp  Utils.h
CGLSNatStatsTools/CGLSNatStatsTools/lib/Anomalies/ZScoreProcessor/: ZScoreProcessor.cpp  ZScoreProcessor.h
CGLSNatStatsTools/CGLSNatStatsTools/lib/ConfigurationParser/: ConfigurationParser.cpp  ConfigurationParser.h
CGLSNatStatsTools/CGLSNatStatsTools/lib/Constants/: Constants.cpp  Constants.h  ProductInfo.cpp  ProductInfo.h  ProductVariable.cpp  ProductVariable.h
CGLSNatStatsTools/CGLSNatStatsTools/lib/Filters/: OTBImageDefs.h
CGLSNatStatsTools/CGLSNatStatsTools/lib/Filters/Functors/: GLCReclassifier.h  ZNormalization.h
CGLSNatStatsTools/CGLSNatStatsTools/lib/Filters/IO/: VectorWktToLabelImageFilter.h  VectorWktToLabelImageFilter.hxx
CGLSNatStatsTools/CGLSNatStatsTools/lib/Filters/RasterReprojection/: RasterReprojectionFilter.h
CGLSNatStatsTools/CGLSNatStatsTools/lib/Filters/Reductors/: MeanReductor.h  SquareRootReductor.h  SquareRootReductor.hxx
CGLSNatStatsTools/CGLSNatStatsTools/lib/Filters/Statistics/: PolygonStats.cpp  PolygonStats.h  StatisticsFromLabelImageFilter.h  StatisticsFromLabelImageFilter.hxx  StreamedStatisticsFromLabelImageFilter.h
CGLSNatStatsTools/CGLSNatStatsTools/lib/Filters/Statistics/StratificationStatistics/: OrderStatisticsFilter.h  OrderStatisticsFilter.hxx  StreamedSystemStratificationStatisticsFilter.h  SystemStratificationStatisticsFilter.h  SystemStratificationStatisticsFilter.hxx
CGLSNatStatsTools/CGLSNatStatsTools/lib/Filters/Visualization/: WMSCogFilter.h  WMSCogFilter.hxx
CGLSNatStatsTools/CGLSNatStatsTools/lib/PostgreSQL/: PGCursor.cpp  PGCursor.h  PostgreSQL.cpp  PostgreSQL.h
CGLSNatStatsTools/CGLSNatStatsTools/lib/ProductOrderProcessor/: Crop.hxx  ProductOrderProcessor.cpp  ProductOrderProcessor.h
CGLSNatStatsTools/CGLSNatStatsTools/lib/StatsExtractor/: StatsExtractor.cpp  StatsExtractor.h
CGLSNatStatsTools/CGLSNatStatsTools/lib/Utils/: ColorInterpolation.cpp  ColorInterpolation.h  Utils.cpp  Utils.hxx
CGLSNatStatsTools/CGLSNatStatsTools/lib/Utils/EmailClient/: SmtpServer.cpp
CGLSNatStatsTools/CGLSNatStatsTools/processors/: AnomalyExtractor.cpp  CogGenerator.cpp  GLCReclassifier.cpp  GLCSimplifier.cpp  OrderProcessor.cpp  StatsExtractor.cpp
Libs/: AlignToImage.py  ConfigurationParser.py  Constants.py  GenericRequest.py  MapServer.py  Utils.py
OpenStack/: credentials_sample.json  runBackend.py
StatsExtractor/: README.md  __init__.py  config.json  data.sql  fetch_timeseries_data.py  main.py  schema.sql  schema.sql.template
StatsExtractor/Backend/: DBDeployer.py  DBImporter.py  DataCrawler.py  MapserverImporter.py  ZonalStatsExtractor.py
StatsExtractor/Backend/DBUtils/: DBDeployer.py  DBExporter.py  DBImporter.py
StatsExtractor/Libs/: AlignToImage.py  ConfigurationParser.py  Constants.py  GenericRequest.py  MapServer.py  Utils.py
StatsExtractor/Styles/: BioPar_BA300_V3_Global.sld  BioPar_LAI300_V1_Global.sld  BioPar_LST_V2_Global.sld  BioPar_NDVI300_V2_Global.sld  BioPar_SWI10_V3_Global.sld  NDVI300V2_LTCAD.sld
StatsExtractor/WebService/Backend/: NatStats.ini  PointValueExtractor.py  StatsRequests.py  main.py  runWebService.sh  runWebServiceLocal.sh  statsservice.ini  stopWebService.sh
StatsExtractor/WebService/Frontend/NatStats/: README.md  index.html  package-lock.json  package.json
StatsExtractor/WebService/Frontend/stats-widget/: README.md  package-lock.json  package.json  vue.config.js
StatsExtractorCpp/StatsExtractor/: CMakeLists.txt  main.cpp
StatsExtractorCpp/StatsExtractor/lib/Anomalies/: Utils.cpp
StatsExtractorCpp/StatsExtractor/lib/Anomalies/ZScoreProcessor/: ZScoreProcessor.cpp  ZScoreProcessor.h
StatsExtractorCpp/StatsExtractor/lib/ConfigurationParser/: ConfigurationParser.cpp  ConfigurationParser.h  configurationparser.cpp  configurationparser.hxx
StatsExtractorCpp/StatsExtractor/lib/Constants/: Constants.cpp  Constants.h  ProductInfo.cpp  ProductInfo.h  ProductVariable.cpp  ProductVariable.h  constants.cpp  constants.hxx
StatsExtractorCpp/StatsExtractor/lib/Filters/: ProcessingChainFilter.h  ProcessingChainFilter.hxx  StreamedProcessingChainFilter.h
StatsExtractorCpp/StatsExtractor/lib/Filters/Functors/: LinearScaler.h  ZNormalization.h
StatsExtractorCpp/StatsExtractor/lib/Filters/IO/: VectorWktToLabelImageFilter.h  VectorWktToLabelImageFilter.hxx  wktvectordataio.cpp  wktvectordataio.hxx
StatsExtractorCpp/StatsExtractor/lib/Filters/RasterReprojection/: RasterReprojectionFilter.h  RasterReprojectionFilter.hxx
StatsExtractorCpp/StatsExtractor/lib/Filters/Reductors/: MeanReductor.h  MeanReductor.hxx  SquareRootReductor.h  SquareRootReductor.hxx
StatsExtractorCpp/StatsExtractor/lib/Filters/Statistics/: PolygonStats.cpp  PolygonStats.h  StatisticsFromLabelImageFilter.h  StatisticsFromLabelImageFilter.hxx  StreamedStatisticsFromLabelImageFilter.h  polygonstats.cpp  polygonstats.hxx
StatsExtractorCpp/StatsExtractor/lib/Filters/Visualization/: WMSCogFilter.h  WMSCogFilter.hxx
StatsExtractorCpp/StatsExtractor/lib/PostgreSQL/: PostgreSQL.cpp  PostgreSQL.h  pgcursor.cpp  pgcursor.hxx  postgresql.cpp  postgresql.hxx
StatsExtractorCpp/StatsExtractor/lib/ProductOrderProcessor/: Crop.hxx  ProductOrderProcessor.cpp  ProductOrderProcessor.h
StatsExtractorCpp/StatsExtractor/lib/StatsExtractor/: StatsExtractor.cpp  StatsExtractor.h  statsextractor.cpp  statsextractor.hxx
StatsExtractorCpp/StatsExtractor/lib/Utils/: ColorInterpolation.cpp  ColorInterpolation.h  Utils.cpp  Utils.hxx  VectorData.h  utils.cpp  utils.hxx
StatsExtractorCpp/StatsExtractor/lib/Utils/EmailClient/: SmtpServer.cpp  SmtpServer.h
StatsExtractorCpp/StatsExtractor/processors/: AnomalyExtractor.cpp  CogGenerator.cpp  GLCSimplifier.cpp  OrderProcessor.cpp  StatsExtractor.cpp
(+85 files in other folders)
